welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:2: error: not found: value b
if ( a%3==0 & b%5==0){
              ^fizzBuzz:5: error: not found: value b
if (a%3==0 & b%5!=0){
             ^fizzBuzz:8: error: not found: value b
if (a%3!=0 & b%5==0){
             ^