welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.code
def fizzBuzz(a:Int):String = {
if ( a%3==0 & b%5==0){
	return "Fizz Buzz"
}
if (a%3==0 & b%5!=0){
	return "Fizz"
}
if (a%3!=0 & b%5==0){
	return "Buzz"
}
else return ""+a
}